# guess

./: .gitattributes  .gitignore  README.md  mypy.ini  setup.py
.refs/: gan.ipynb.REMOVED.git-id
config/: stage_guess.config.rviz
config/rviz/: stage_guess.config.rviz  turtlebot_guess.config.rviz
config/world/: diag_floor_b1.world  diag_floor_b1.yaml  occgrid2topomap.ipynb  simple_corridor.world
dataset/: diag_first_floor.txt.REMOVED.git-id  diag_labrococo.txt.REMOVED.git-id  diag_underground.txt.REMOVED.git-id
python/krl/ai/: __init__.py
python/krl/ai/models/: __init__.py  generative_adversarial_network.py  utils.py  variational_autoencoder.py
python/tests/krl/ai/models/: test_gan.py  test_variational_autoencoder.py
scripts/: coverage.sh  guess_env.sh
src/py/: autoencoder_lib.py  gan.ipynb  gan_gluon.ipynb  gan_guess.ipynb  gan_keras.ipynb  gan_lib.py  pplot.py  scan_guesser.ipynb.REMOVED.git-id  scan_guesser.py  scan_guesser_socket.py  utility_guess.ipynb  utility_guess.py  utils.py  vae.ipynb.REMOVED.git-id  vae_guess.ipynb  vae_guess.ipynb.REMOVED.git-id
src/ros/: CMakeLists.txt
src/ros/guess/guess_app/: test_stuff.cpp
src/ros/guess/guess_lib/: CMakeLists.txt  labels.h  laser_reading.hpp  projector2d.h  sin_cos_table.h
src/ros/guess/test_data/dataset_malaga20060121/: 20060121-Teleco_Faculty_Malaga_laser_only.rawlog.REMOVED.git-id
src/ros/guess_app/: CMakeLists.txt
src/ros/guess_lib/: projector2d.cpp
src/ros/guess_ros/: CMakeLists.txt  package.xml
src/ros/guess_ros/src/node/: CMakeLists.txt  dumper_node.cpp  readme.md
src/ros/guess_simulation/: CMakeLists.txt  package.xml
src/ros/guess_simulation/maps/: simple_corridor.yaml
src/ros/guess_simulation/models/diag_floor_b1/: model.config  model.sdf
src/ros/guess_simulation/models/diag_floor_b1/meshes/: diag_floor_b1.stl
src/ros/guess_simulation/models/simple_corridor/: model.config  model.sdf
src/ros/guess_simulation/models/simple_corridor/meshes/: simple_corridor.stl
src/ros/guess_simulation/urdf/husky/: sensors.urdf.xacro
src/ros/guess_simulation/worlds/: diag_floor_b1.world  simple_corridor.world
src/ros/lib/: CMakeLists.txt  def.h  laser_reading.hpp  point.hpp  projector2d.cpp  projector2d.h
src/ros/scan_guesser_node/: CMakeLists.txt  package.xml  setup.py
src/ros/scan_guesser_node/cfg/: costmap_common_params.yaml  dwa_local_planner_params.yaml
src/ros/scan_guesser_node/launch/: guess_env.launch  guess_stage_env.launch  guesser.launch
src/ros/scan_guesser_node/src/scan_guesser_node/: guesser_utils.py
src/ros/test_data/dataset_malaga20060121/: 20060121-Teleco_Faculty_Malaga_laser_only_LASER.txt.REMOVED.git-id
src/ros/world/: diag_floor_b1.world  diag_floor_b1.yaml
src/scripts/: guess_env.sh  guess_ros.sh
