<?xml version="1.0"?>
<package format="2">
  <name>guess_simulation</name>
  <version>0.0.0</version>
  <description>The guess_simulation package</description>

  <maintainer email="shrijitsingh99@gmail.com">Shrijit Singh</maintainer>

  <license>TODO</license>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>lms1xx</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>
</package>
